--- a/travis.yml
+++ b/travis.yml
@@ -1,2 +1,3 @@
-  language:java
-  mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+language: java
+sudo: false
+script: mvn clean verify
