--- a/travis.yml
+++ b/travis.yml
@@ -1,3 +1,6 @@
 language: java
 sudo: false
-script: mvn clean verify
+script:
+  - ./mvn clean install
+  - bash <(curl -s https://codecov.io/bash)
+install: true
