--- a/travis.yml
+++ b/travis.yml
@@ -2,9 +2,18 @@ language: java
 jdk:
   - openjdk8
 
-script: ./mvnw clean install
 
 
+cache:
+  directories:
+    - "$HOME/.m2"
+install:
+  - curl -o $HOME/.m2/settings.xml
+    https://raw.githubusercontent.com/trajano/trajano/master/src/site/resources/settings.xml
+  - mvn dependency:go-offline
+script:
+  - mvn clean install site
+  - script: ./mvnw clean install
 jobs:
   include:
     - stage: Test
